# sta

./: .gitattributes  .gitignore  CLAUDE.md  MEMORY.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  railway.toml  run.py
backend/app/: main.py  seed.py
backend/app/api/v1/: auth.py  dashboard.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  core.py  insurance.py  ledger.py  payment.py  supply_chain.py  tax.py  trade.py
backend/app/schemas/: auth.py
docs/: intra-african-trade-data.md  ps-trade-research.md
frontend/: .env.production  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  endpoints.ts
frontend/src/components/layout/: AppLayout.tsx  ProtectedRoute.tsx  SidebarContent.tsx  TopNavBar.tsx  layoutConstants.ts
frontend/src/constants/: africaMapPaths.ts  organizations.ts
frontend/src/hooks/: useDataIsolation.ts
frontend/src/pages/: DashboardPage.tsx  LandingPage.tsx  LoginPage.tsx  PlaceholderPage.tsx
frontend/src/pages/admin/: AdminDashboardPage.tsx  CountriesPage.tsx  FeatureFlagsPage.tsx  IntegrationSettingsPage.tsx  JobDashboardPage.tsx  OrganizationsPage.tsx  SystemMetricsPage.tsx  UsersPage.tsx
frontend/src/pages/afcfta/: AfCFTACorridorsPage.tsx  AfCFTADashboardPage.tsx  AfCFTAProgressPage.tsx  AfCFTARECsPage.tsx  AfCFTATariffPage.tsx  AfCFTATariffTrackerPage.tsx  RulesOfOriginPage.tsx  (+1 more)
frontend/src/stores/: appStore.ts  authStore.ts
frontend/src/theme/: theme.ts
frontend/src/types/: index.ts
landing/: index.html
(+94 files in other folders)
